--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -1,6 +1,6 @@
 
 
-<h3><font color=silver>Silver Level Sponsors</font></h3>
+<h3><span style="color:white">Silver Level Sponsors</span></h3>
 <table border="0" cellpadding="20">
 <tbody><tr>
 
