--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -1,15 +1,13 @@
 
 
-<h3><span style="color:white">Silver Level Sponsors</span></h3>
+<h3><span style="color:silver">Silver Level Sponsors</span></h3>
 <table border="0" cellpadding="20">
 <tbody><tr>
 
-<td style="width: 150px"><a href="https://www.naver.com/"><img border="0" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Naver_Logotype.svg" ></a></td>
-
-</tr></tbody></table>
-
-<table border="0" cellpadding="20">
-<tbody><tr>
-
+<td style="width: 200px" align="center">
+  <a href="https://www.naver.com/">
+    <img border="0" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Naver_Logotype.svg" >
+  </a>
+</td>
 
 </tr></tbody></table>
