--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -1,7 +1,7 @@
 
 
-<h3><span style="color:silver">Silver Level Sponsors</span></h3>
-<table border="0" cellpadding="20">
+<h3><span style="color:white">Silver Level Sponsors</span></h3>
+<table border="0" cellpadding="20" align="center">
 <tbody><tr>
 
 <td style="width: 200px" align="center">
