--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -4,6 +4,12 @@
 <table border="0" cellpadding="20" align="center">
 <tbody><tr>
 
+<td style="width: 350px" align="center">
+
+</td>
+  
+
+  
 <td style="width: 200px" align="center">
   <a href="https://www.naver.com/">
     <img border="0" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Naver_Logotype.svg" >
@@ -11,3 +17,4 @@
 </td>
 
 </tr></tbody></table>
+
