--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -2,7 +2,7 @@
 
 <br><br>
 
-<h3><span style="color:white">Silver Level Sponsors</span></h3>
+<h3><span style="color:silver">Silver Level Sponsors</span></h3>
 
 
 <table border="0" cellpadding="20" align="center">
