--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -2,7 +2,7 @@
 
 <br><br>
 
-<h3><span style="color:silver">Silver Level Sponsors</span></h3>
+<h3><span style="color:white">Silver Level Sponsors</span></h3>
 
 
 <table border="0" cellpadding="20" align="center">
@@ -14,7 +14,7 @@
   
 
   
-<td style="width: 200px" align="center">
+<td style="width: 240px" align="center">
   <a href="https://www.naver.com/">
     <img border="0" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Naver_Logotype.svg" >
   </a>
