--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -8,8 +8,9 @@
 <table border="0" cellpadding="20" align="center">
 <tbody><tr>
 
+<td style="width: 50px" />
   
-<td style="width: 240px" align="center">
+<td style="width: 200px" align="center">
   <a href="https://www.naver.com/">
     <img border="0" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Naver_Logotype.svg" >
   </a>
