added NYU CDS as gold sponsor

--- a/_includes/gold-sponsors.html
+++ b/_includes/gold-sponsors.html
@@ -1,14 +1,19 @@
 
+<br><br>
+
 <h3><font color=gold>Gold Level Sponsors</font></h3>
 <table border="0" cellpadding="20">
 <tbody><tr>
 
-<td style="width: 150px"><a href="..."><img border="0" src="..." ></a></td>
-
-</tr></tbody></table>
-
-<table border="0" cellpadding="20">
+table border="0" cellpadding="20" align="center">
 <tbody><tr>
 
+<td style="width: 50px" />
+  
+<td style="width: 400px" align="center">
+  <a href="https://cds.nyu.edu/">
+    <img border="0" src="img/CDS_black.jpg" >
+  </a>
+</td>
 
 </tr></tbody></table>
