--- a/_includes/gold-sponsors.html
+++ b/_includes/gold-sponsors.html
@@ -1,11 +1,10 @@
 
 <br><br>
 
-<h3><font color=gold>Gold Level Sponsors</font></h3>
-<table border="0" cellpadding="20">
-<tbody><tr>
+<h3><span style="color:gold">Gold Level Sponsors</span></h3>
 
-table border="0" cellpadding="20" align="center">
+
+<table border="0" cellpadding="20" align="center">
 <tbody><tr>
 
 <td style="width: 50px" />
@@ -17,3 +16,4 @@ table border="0" cellpadding="20" align="center">
 </td>
 
 </tr></tbody></table>
+
