--- a/_includes/gold-sponsors.html
+++ b/_includes/gold-sponsors.html
@@ -14,6 +14,11 @@
     <img border="0" src="img/CDS_black.jpg" >
   </a>
 </td>
+<td style="width: 400px" align="center">
+  <a href="http://kaggle.com/">
+    <img border="0" src="img/kaggle.png" >
+  </a>
+</td>
 
 </tr></tbody></table>
 
