--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -15,6 +15,11 @@
     <img border="0" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Naver_Logotype.svg" >
   </a>
 </td>
+<td style="width: 400px" align="center">
+  <a href="http://google.com/">
+    <img border="0" src="img/google.png" >
+  </a>
+</td>
 
 </tr></tbody></table>
 
