--- a/_includes/bronze-sponsors.html
+++ b/_includes/bronze-sponsors.html
@@ -10,7 +10,7 @@
   
 <td style="width: 180px" align="center">
   <a href="http://zendesk.com/">
-    <img border="0" src="img/zendesk.png" >
+    <img border="0" src="img/zendesk.svg" >
   </a>
 </td>
 
