--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -10,13 +10,13 @@
 
 <td style="width: 50px" />
   
-<td style="width: 200px" align="center">
+<td style="width: 200px" align="center" cellspacing="10">
   <a href="https://www.naver.com/">
     <img border="0" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Naver_Logotype.svg" >
   </a>
 </td>
   
-<td style="width: 200px" align="center">
+<td style="width: 200px" align="center" cellspacing="10">
   <a href="http://google.com/">
     <img border="0" src="img/google.png" >
   </a>
