--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -5,7 +5,7 @@
 <h3><span style="color:white">Silver Level Sponsors</span></h3>
 
 
-<table border="0" cellpadding="40" align="center">
+<table border="0" cellpadding="40" cellspacing="40" align="center">
 <tbody><tr>
 
 <td style="width: 50px" />
