--- a/_includes/bronze-sponsors.html
+++ b/_includes/bronze-sponsors.html
@@ -3,12 +3,12 @@
 <h3><span style="color:bronze">Bronze Level Sponsors</span></h3>
 
 
-<table border="0" cellpadding="20" align="center">
+<table border="0" cellpadding="40" cellspacing="40" align="center">
 <tbody><tr>
 
 <td style="width: 50px" />
   
-<td style="width: 180px" align="center">
+<td style="width: 190px" align="center">
   <a href="http://zendesk.com/">
     <img border="0" src="img/zendesk.svg" >
   </a>
