--- a/_includes/silver-sponsors.html
+++ b/_includes/silver-sponsors.html
@@ -9,13 +9,15 @@
 <tbody><tr>
 
 <td style="width: 70px" />
-  
+
 <td style="width: 200px" align="center">
   <a href="https://www.naver.com/">
     <img border="0" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Naver_Logotype.svg" >
   </a>
 </td>
-  
+
+<td style="width: 70px" />
+
 <td style="width: 200px" align="center">
   <a href="http://google.com/">
     <img border="0" src="img/google.png" >
