--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,12 @@
 <div class="navigation">
     <ul id="navigation-list">
-        <li><a href="/2018/">2018</a></li>
-        <li><a href="/2020/">2020</a></li>
+        <li><a href="/2020/index.html">Home</a></li>
+        <li><a href="/2020/index.html#Call for Papers">Call for Papers</a></li>
+   <!-- <li><a href="/2020/index.html#Workshop Program">Workshop Program</a></li> -->
+        <li><a href="/2020/index.html#Important dates">Important dates</a></li>
+        <li><a href="/2020/index.html#Invited Speakers">Invited Speakers</a></li>
+        <li><a href="/2020/index.html#Organizers">Organizers</a></li>
+        <li><a href="/2020/index.html#Programme Committee">Programme Committee</a></li>
+        <li><a href="/2020/index.html#Previous Workshop">Previous Workshop</a></li>
     </ul>
 </div>
