--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,11 +27,15 @@ body {
   background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
-	  
+
 @media (prefers-color-scheme: dark) {
   color: $body-color-dark;
   background-color: $body-bg-dark;
   }
+}
+
+main {
+  padding-top: 40px;
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
@@ -44,7 +48,7 @@ a {
   &:focus {
     text-decoration: none;
 	color: $light;
-	
+
 	@media (prefers-color-scheme: dark) {
     color: $dark;
     }
@@ -53,7 +57,7 @@ a {
   strong {
     color: inherit;
   }
-  
+
 @media (prefers-color-scheme: dark) {
   color: $dark;
   }
@@ -72,7 +76,7 @@ table {
   font-size: 85%;
   border: 1px solid #d4d4d4;
   border-collapse: collapse;
-  
+
 @media (prefers-color-scheme: dark) {
   border: 1px solid #555555;
   }
@@ -82,7 +86,7 @@ td,
 th {
   padding: .25rem .5rem;
   border: 1px solid #d4d4d4;
-  
+
 @media (prefers-color-scheme: dark) {
   border: 1px solid #555555;
   }
