--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,12 +1,13 @@
 <div class="navigation">
     <ul id="navigation-list">
         <li><a href="/2020/index.html">Home</a></li>
-        <li><a href="/2020/index.html#Call for Papers">Call for Papers</a></li>
-   <!-- <li><a href="/2020/index.html#Workshop Program">Workshop Program</a></li> -->
-        <li><a href="/2020/index.html#Important dates">Important dates</a></li>
-        <li><a href="/2020/index.html#Invited Speakers">Invited Speakers</a></li>
-        <li><a href="/2020/index.html#Organizers">Organizers</a></li>
-        <li><a href="/2020/index.html#Programme Committee">Programme Committee</a></li>
-        <li><a href="/2020/index.html#Previous Workshop">Previous Workshop</a></li>
+        <li><a href="/2020/index.html#call-for-papers">Call for Papers</a></li>
+   <!-- <li><a href="/2020/index.html#workshop-program">Workshop Program</a></li> -->
+        <li><a href="/2020/index.html#important-dates">Important dates</a></li>
+        <li><a href="/2020/index.html#invited-speakers">Invited Speakers</a></li>
+        <li><a href="/2020/index.html#organizers">Organizers</a></li>
+        <li><a href="/2020/index.html#programme-committee">Programme Committee</a></li>
+        <li><a href="/2020/index.html#previous-workshop">Previous Workshop</a></li>
     </ul>
+
 </div>
