--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -7,19 +7,20 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
   color: #55555c;
   position: relative;
-  
+  z-index: -1;
+
   @media (prefers-color-scheme: dark) {
     color: #d0f6db;
 	}
 }
 
 h2::before,h4::before,h5::before,h6::before {
-    content: "#";
+    content: "";
     color: #55555c;
     left: -1.2em;
     top: 0;
-	position: absolute;
-    
+	position: sticky;
+
   @media (prefers-color-scheme: dark) {
     color: #d0f6db;
 	}
@@ -27,16 +28,22 @@ h2::before,h4::before,h5::before,h6::before {
 
 h1 {
   font-size: 1.5rem;
+  text-align: center;
+
 }
 
 h2 {
-  margin-top: 1rem;
+  padding-top: 80px;
+  margin-top: 3rem;
   font-size: 1.5rem;
 }
 
 h3 {
   margin-top: 1.5rem;
+  padding-top: 0;
   font-size: 1.25rem;
+  font-weight: lighter;
+  text-align: center;
 }
 
 h4, h5, h6 {
@@ -67,7 +74,7 @@ hr {
   border: 0;
   border-top: 1px solid #d4d4d4;
   border-bottom: 1px solid #d4d4d4;
-  
+
 @media (prefers-color-scheme: dark) {
   border-top: 1px solid #333333;
   border-bottom: 1px solid #333333;
@@ -107,7 +114,7 @@ blockquote {
   position: relative;
   opacity: .7;
   border-left: 3px solid #d4d4d4;
-  
+
   @media (prefers-color-scheme: dark) {
     border-left: 3px solid #333333;
 	}
@@ -130,7 +137,7 @@ mark {
     background: #cefce8;
     color: $body-color;
 	padding: 2px 2px;
-	
+
   @media (prefers-color-scheme: dark) {
     background: #0fb47c;
     color: $body-color-dark;
@@ -150,7 +157,7 @@ a[href^="#fn:"] {
   border: 1px solid #eee;
   border-radius: 1em;
   vertical-align: middle;
-  
+
 @media (prefers-color-scheme: dark) {
     color: $dark;
 	background: #2c2c2c;
