--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -22,7 +22,7 @@ h2::before,h4::before,h5::before,h6::before {
 	position: sticky;
 
   @media (prefers-color-scheme: dark) {
-    color: #d0f6db;
+    color: #81a98d;
 	}
 }
 
