--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -10,7 +10,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: -1;
 
   @media (prefers-color-scheme: dark) {
-    color: #d0f6db;
+    color: #81a98d;
 	}
 }
 
