--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,9 +3,22 @@
 // Original noir
 //$light: #f76b48;
 //$dark: #1ba77e;
-$light: #ff5000;
-$dark: #75aa5d;
+
+// Millo Orange-Green theme.
+//$light: #ff5000;
+//$dark: #75aa5d;
+//$white: #ffffff;
+
+// Lemonstand Black-Blue theme.
+//$light: #2aabe4;
+//$dark: #33393d;
+//$white: #ffffff;
+
+// Loom Red-Bleu-Grey theme.
+$light: #fe7860;
+$dark: #506cf0;
 $white: #ffffff;
+
 
 // Highlighting color for code block borders and language name.
 
