changed to lemon stand color

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,14 +10,14 @@
 //$white: #ffffff;
 
 // Lemonstand Black-Blue theme.
-//$light: #2aabe4;
-//$dark: #33393d;
-//$white: #ffffff;
+$light: #2aabe4;
+$dark: #33393d;
+$white: #ffffff;
 
 // Loom Red-Bleu-Grey theme.
-$light: #fe7860;
-$dark: #506cf0;
-$white: #ffffff;
+//$light: #fe7860;
+//$dark: #506cf0;
+//$white: #ffffff;
 
 
 // Highlighting color for code block borders and language name.
