--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -42,7 +42,8 @@ h2 {
 h3 {
   margin-top: 1.5rem;
   padding-top: 0;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 h7 {
