--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <meta property=’og:title’ content='Workshop for NLP Open Source Software (NLP-OSS)'/>
+  <meta property=’og:image’ content='https://raw.githubusercontent.com/nlposs/nlposs.github.io/master/assets/nlposs-2023.jpg’/>
+  <meta property=’og:url’ content='https://nlposs.github.io/'/>
+  <meta property='og:image:width' content='1200' />
+  <meta property='og:image:height' content='627' />
+  
   <title>
     {% if page.title == "Home" %}
      {{ site.title }}{% if site.tagline %} &middot; {{ site.tagline }}{% endif %}
