--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
         <li><a href="/2023/index.html#organizers">Organizers</a></li>
         <li><a href="/2023/index.html#programme-committee">Programme Committee</a></li>
         <li><a href="/2023/index.html#call-for-papers">Call for Papers</a></li>
-        <li><a href="/2023/index.html#previous-workshop">Previous Workshop</a></li>
+        <li><a href="/2023/index.html#previous-workshops">Previous Workshops</a></li>
     </ul>
 
 </div>
